Put in web scraped data

--- a/index.handlebars
+++ b/index.handlebars
@@ -1,14 +1,23 @@
-
-<html><head><title>The Dormouse's story</title></head>
-<body>
-<p class="title"><b>The Dormouse's story</b></p>
-<p class="story">Once upon a time there were three little sisters; their names:
-<a href="http://example.com/elsie" class="sister" id="link1">Elsie</a>,
-<a href="http://example.com/lacie" class="sister" id="link2">Lacie</a> and
-<a href="http://example.com/tillie" class="sister" id="link3">Tillie</a>;
-and they lived at the bottom of a well.</p>
-<p class="story">...</p>
-<b class="boldest">Extremely bold</b>
-<blockquote class="boldest">Extremely bold</blockquote>
-<b id="1">Test 1</b>
-<b another-attribute="1" id="verybold">Test 2</b>
+<table>
+<tr><th>'Position'</th><th>'Team'</th>
+<tr><td class='place'>1</td><td class='Liverpool'>Liverpool</td></tr>
+<tr><td class='place'>2</td><td class='Leicester City'>Leicester City</td></tr>
+<tr><td class='place'>3</td><td class='Manchester City'>Manchester City</td></tr>
+<tr><td class='place'>4</td><td class='Chelsea'>Chelsea</td></tr>
+<tr><td class='place'>5</td><td class='Tottenham Hotspur'>Tottenham Hotspur</td></tr>
+<tr><td class='place'>6</td><td class='Sheffield United'>Sheffield United</td></tr>
+<tr><td class='place'>7</td><td class='Manchester United'>Manchester United</td></tr>
+<tr><td class='place'>8</td><td class='Wolverhampton Wanderers'>Wolverhampton Wanderers</td></tr>
+<tr><td class='place'>9</td><td class='Crystal Palace'>Crystal Palace</td></tr>
+<tr><td class='place'>10</td><td class='Newcastle United'>Newcastle United</td></tr>
+<tr><td class='place'>11</td><td class='Arsenal'>Arsenal</td></tr>
+<tr><td class='place'>12</td><td class='Burnley'>Burnley</td></tr>
+<tr><td class='place'>13</td><td class='Everton'>Everton</td></tr>
+<tr><td class='place'>14</td><td class='Southampton'>Southampton</td></tr>
+<tr><td class='place'>15</td><td class='Brighton and Hove Albion'>Brighton and Hove Albion</td></tr>
+<tr><td class='place'>16</td><td class='Bournemouth'>Bournemouth</td></tr>
+<tr><td class='place'>17</td><td class='West Ham United'>West Ham United</td></tr>
+<tr><td class='place'>18</td><td class='Aston Villa'>Aston Villa</td></tr>
+<tr><td class='place'>19</td><td class='Watford'>Watford</td></tr>
+<tr><td class='place'>20</td><td class='Norwich City'>Norwich City</td></tr>
+</table>
